<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        tools:context=".view.LoginActivity">

        <ImageView
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:scaleType="centerCrop"
            android:src="@drawable/bg_login"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            tools:ignore="ContentDescription" />

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_marginStart="8dp"
            android:layout_marginEnd="8dp"
            android:background="@drawable/background_form"
            app:layout_constraintBottom_toBottomOf="parent">

            <TextView
                android:id="@+id/welcomeText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginTop="24dp"
                android:layout_marginEnd="16dp"
                android:fontFamily="@font/regular"
                android:lineSpacingExtra="5.8sp"
                android:text="@string/login_subtitle"
                android:textColor="@color/gray_757575"
                android:textSize="14sp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <com.inensus.android.base.view.default_input.DefaultInputView
                android:id="@+id/emailInput"
                style="@style/DefaultInputView"
                android:layout_width="match_parent"
                android:layout_height="54dp"
                android:layout_marginStart="16dp"
                android:layout_marginTop="16dp"
                android:layout_marginEnd="16dp"
                app:hint="@string/login_email_hint"
                app:icon="@drawable/ic_agent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/welcomeText"
                app:title="@string/login_email_title" />

            <com.inensus.android.base.view.password_input.PasswordInputView
                android:id="@+id/passwordInput"
                style="@style/DefaultInputView"
                android:layout_width="match_parent"
                android:layout_height="54dp"
                android:layout_marginStart="16dp"
                android:layout_marginTop="12dp"
                android:layout_marginEnd="16dp"
                android:inputType="textPassword"
                app:hint="@string/login_password_hint"
                app:icon="@drawable/eye"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/emailInput"
                app:title="@string/login_password_title" />

            <ImageView
                android:id="@+id/questionImage"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginTop="12dp"
                android:layout_marginEnd="16dp"
                android:src="@drawable/ic_question_mark"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/passwordInput" />

            <TextView
                android:id="@+id/forgotPasswordText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:fontFamily="@font/semi_bold"
                android:text="@string/login_forgot_password"
                android:textColor="@color/gray_616161"
                android:textSize="12sp"
                app:layout_constraintBottom_toBottomOf="@+id/questionImage"
                app:layout_constraintStart_toEndOf="@+id/questionImage"
                app:layout_constraintTop_toTopOf="@+id/questionImage" />

            <com.google.android.material.button.MaterialButton
                android:id="@+id/loginButton"
                style="@style/MaterialButton"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginTop="38dp"
                android:layout_marginEnd="16dp"
                android:layout_marginBottom="24dp"
                android:text="@string/login_button"
                app:cornerRadius="2dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/forgotPasswordText" />

            <View
                android:id="@+id/underline"
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:layout_marginStart="24dp"
                android:layout_marginTop="24dp"
                android:layout_marginEnd="24dp"
                android:background="@color/gray_EEEEEE"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/loginButton" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:layout_marginBottom="16dp"
                android:fontFamily="@font/regular"
                android:text="@string/login_rights_reserved"
                android:textColor="@color/gray_757575"
                android:textSize="10sp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/underline"
                tools:ignore="SmallSp" />

        </androidx.constraintlayout.widget.ConstraintLayout>

    </androidx.constraintlayout.widget.ConstraintLayout>

</ScrollView>
